[package]
name = "lis3dh"
description = "An embedded-hal driver for the LIS3DH accelerometer that implements the generic accelerometer trait"
version = "0.5.0"
license = "Apache-2.0 OR MIT"
authors = [
    "Benjamin Bergman <ben@benbergman.ca>",
    "Paul Sajna <sajattack@gmail.com>",
    "Jesse Braham <jesse@beta7.io>",
    "Folkert de Vries <folkert@folkertdev.nl>"
]
keywords = [
    "embedded-hal-driver",
    "accelerometer",
]
repository = "https://github.com/BenBergman/lis3dh-rs"
edition = "2018"

[dependencies]
accelerometer = "0.12"
embedded-hal = "1.0"
num_enum = { version = "0.7", default-features = false }

[dev-dependencies]
circuit_playground_express = { version = "0.11", features = ["use_semihosting"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1.0"
